Patch provided by rayw@netscape.com: Ignore xsi:type if it's not a proper subtype of the schema-guaranteed type. b=202597, r=harishd@netscape.com, sr=jst@netscape.com